ajout bootstrap, calendrier, ect..

--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@syncfusion/ej2-angular-schedule": "^20.4.50",
+    "angular-material-event-calendar": "^0.1.4",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@syncfusion/ej2-material-theme": "~20.4.50"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.7",
